--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,6 @@ html {
 .slideOverlay {
   background: var(--gradientwithOpacity);
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -42,18 +40,16 @@ html {
   @apply text-primaryDark sm:text-2xl md:text-3xl text-lg
 }
 .subHeading{
-  @apply text-helper sm:text-2xl md:text-3xl text-lg relative
+  @apply text-helper sm:text-2xl md:text-3xl text-lg relative pl-4 my-4 shadow-primaryDark py-2;
 }
 .subHeading::before {
   content: '';
-  @apply absolute left-0 top-1/2 -translate-y-1/2 border-solid;
-  border-left-color: transparent;
-  border-right-color: transparent;
-  border-bottom-color: currentColor; /* Matches the text color (helper) */
-  border-left-width: 0;
-  border-right-width: 0;
-  border-bottom-width: 6px; /* Triangle size */
-  border-top-width: 6px; /* Triangle size */
+ position: absolute;
+ top:0;
+ left: 0;
+ width: 10px;
+ height: 100%;
+ background-color: var(--helper);
 }
 /* Reusable Primary Button Class */
 .primaryButton {
@@ -79,10 +75,10 @@ html {
   @apply max-w-[90vw] mx-auto;
 }
 .link{
-  @apply text-blue-600 underline text-lg transition-colors duration-300;
+  @apply text-helper underline text-lg transition-colors duration-300;
 }
 .link:hover{
-  @apply text-blue-800 
+  @apply text-helper font-semibold
 }
 .errorMessage{
   @apply text-lg text-red-600;
