loading component added to the project

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,7 @@ html {
   @apply text-primaryDark sm:text-3xl md:text-5xl text-2xl;
 }
 .secondayHeading{
-  @apply text-primaryDark sm:text-2xl md:text-3xl text-lg
+  @apply text-primaryDark sm:text-2xl  text-lg
 }
 .subHeading{
   @apply text-helper sm:text-2xl md:text-3xl text-lg relative pl-4 my-4 shadow-primaryDark py-2;
